--- a/themes/mukurtu_v4/css/style.css
+++ b/themes/mukurtu_v4/css/style.css
@@ -961,6 +961,7 @@ a:not(.primary-nav__menu-link) svg.tel path {
   background-color: var(--brand-primary-dark);
   color: var(--light-text-color);
   text-decoration: none;
+  outline-color: var(--color-white);
 }
 
 .media-asset--actions,
